# Utility

./: .clang-format  .gitignore  CMakeLists.txt  LifetimeCounter.hpp  __undef.hpp  big_int.hpp  format-all.sh  lib.lua  lldb_format.py  premake-common.lua  premake5.lua  premakeCommon.lua  utility_project.lua  utility_workspace.lua
Benchmark/: map.cpp
CodeGenerators/: SOA.cpp  main.hpp
Playground/: __compressed_vector_0.hpp  main.cpp  main2.cpp  main3.cpp  main4.cpp  single_header_generator.cpp  single_header_generator.hpp  test.cpp  test.hpp
UtilityTest/: main.cpp
UtilityTest/mtl/: arithmetic.t.cpp  base.t.cpp  color.t.cpp  complex.t.cpp  ext.t.cpp  matrix.t.cpp  polynomial.t.cpp  quaternion.t.cpp  shapes.t.cpp  vector.t.cpp
UtilityTest/utl/: DebugMemoryResource.hpp  LifetimeCounter.cpp  StdoutReroute.hpp  UUID.t.cpp  __common.t.cpp  __prime.t.cpp  aabb_tree.t.cpp  algorithm.t.cpp  common.t.cpp  concurrent_dispatch_queue.t.cpp  debug.t.cpp  dispatch_queue.t.cpp  dynamic_dispatch.t.cpp  function.t.cpp  function_view.t.cpp  ilist.t.cpp  iterator.t.cpp  lazy.t.cpp  map.t.cpp  math.t.cpp  memory_resource.t.cpp  messenger.t.cpp  monotonic_buffer_resource.t.cpp  pimpl.t.cpp  pointer_int_pair.t.cpp  pool_resource.t.cpp  ranges.t.cpp  scope_guard.t.cpp  soa.t.cpp  stack.t.cpp  structure_of_arrays.t.cpp  structure_of_arrays.t.cpp.depr  terminates.hpp  thread_pool.t.cpp  utility.t.cpp  variant.t.cpp  vector.t.cpp  vector_regression.t.cpp
UtilityTest/utl/graph/: Vertex.hpp  find_cycle.t.cpp  topsort.t.cpp
UtilityTest/utl/vector/: VectorTest.hpp  constructors.t.cpp  insert-erase.t.cpp  vector.t.cpp
benchmark_lib/include/benchmark/: export.h
benchmark_lib/src/: benchmark.cc  benchmark_api_internal.cc  benchmark_api_internal.h  benchmark_main.cc  benchmark_name.cc  benchmark_register.cc  benchmark_register.h  benchmark_runner.h  check.cc  check.h  colorprint.cc  commandlineflags.cc  commandlineflags.h  console_reporter.cc  csv_reporter.cc  internal_macros.h  json_reporter.cc  mutex.h  re.h  sleep.cc  sleep.h  string_util.h  sysinfo.cc  thread_manager.h  thread_timer.h
code-gen/: SOA.cpp  main.cpp
include/mtl/: __arithmetic.hpp  __complex.hpp  __matrix.hpp  __quaternion.hpp  __typedefs.hpp  core.hpp
include/utl/: CMakeLists.txt  __base.hpp  __debug.hpp  __farray.hpp  __function.hpp  __function_objects.hpp  __memory_resource_base.hpp  __prime.hpp  __ranges_base.hpp  __robin_hood.h  __soa_generated.hpp  __union.hpp  __wrap_iterator.hpp  bit.hpp  bktree.hpp  callback_iterator.hpp  common.hpp  concepts.hpp  dynamic_dispatch.hpp  dynamic_library.hpp  dyncast.hpp  expected.hpp  expression_parser.hpp  filesystem_ext.hpp  format.hpp  format_time.hpp  function_view.hpp  functional.hpp  graph.hpp  hash.hpp  hashmap.hpp  hashset.hpp  hashtable.hpp  ilist.hpp  ipp.hpp  lazy.hpp  math.hpp  mdarray.hpp  memory_resource.hpp  messenger.hpp  (+25 more)
include/utl/__fmt/: args.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h
include/utl/__graph/: chordal.hpp  find_cycle.hpp  greedy_color.hpp  scc.hpp  topsort.hpp
include/utl/__third_party/ankerl/: unordered_dense.h
include/utl/dispatch/: concurrent_dispatch_queue.hpp  thread_pool.hpp
mtl/: __arithmetic.hpp  __base.hpp  __common.hpp  __complex.hpp  __ext.hpp  __intrin.hpp  __matrix.hpp  __polynomial.hpp  __quaternion.hpp  __shapes.hpp  __std_concepts.hpp  __undef.hpp  __vector.hpp  complex.hpp  core.hpp  ext.hpp  matrix.hpp  mtl.hpp  quaternion.hpp  shapes.hpp  vector.hpp
mtl_single_header/: mtl.hpp
src/: CMakeLists.txt  __debug.cpp  concurrent_dispatch_queue.cpp  dynamic_library.cpp  fancy_debug.cpp  log.cpp  memory_resource.cpp  stdio.cpp  thread.cpp  thread_pool.cpp  typeinfo.cpp  uuid.cpp
src/fmt/: fmt.cc
test/mtl/: arithmetic.t.cpp  base.t.cpp  color.t.cpp  complex.t.cpp  ext.t.cpp  matrix.t.cpp  polynomial.t.cpp  quaternion.t.cpp  shapes.t.cpp  vector.t.cpp
test/test-lib/: CMakeLists.txt  test.cpp
test/utl/: CMakeLists.txt  DebugMemoryResource.hpp  LifetimeCounter.cpp  LifetimeCounter.hpp  StdoutReroute.cpp  TypeCompare.h  __prime.t.cpp  algorithm.t.cpp  bktree.t.cpp  callback_iterator.t.cpp  common.t.cpp  concurrent_dispatch_queue.t.cpp  dynamic_dispatch.t.cpp  dynamic_library.t.cpp  dyncast.t.cpp  farray.t.cpp  format_time.t.cpp  function.t.cpp  function_view.t.cpp  hashtable.t.cpp  ilist.t.cpp  ipp.t.cpp  lazy.t.cpp  math.t.cpp  memory_resource.t.cpp  messenger.t.cpp  metric_table.t.cpp  monotonic_buffer_resource.t.cpp  pimpl.t.cpp  pointer_int_pair.t.cpp  pool_resource.t.cpp  projection.t.cpp  ptr_union.t.cpp  queue.t.cpp  ranges.t.cpp  scope_guard.t.cpp  small_ptr_vector.t.cpp  stack.t.cpp  streammanip.t.cpp  structure_of_arrays.t.cpp  (+8 more)
test/utl/graph/: Vertex.hpp  chordal.t.cpp  find_cycle.t.cpp  greedy_color.t.cpp  scc.t.cpp  topsort.t.cpp
test/utl/vector/: VectorTest.hpp  acquire-release.t.cpp  constructors.t.cpp  insert-erase.t.cpp  vector.t.cpp
tool/: configure.sh  format-all.sh
utl/: BVH.hpp  UUID.cpp  UUID.hpp  __base.hpp  __common.hpp  __debug.cpp  __debug.hpp  __depr_structure_of_arrays.hpp  __function.hpp  __function_objects.hpp  __map_info_buffer.hpp  __memory_resource_base.hpp  __prime.hpp  __ranges_base.hpp  __robin_hood.h  __soa_exp.hpp  __soa_generated.hpp  __union.hpp  _depr_mdvector_adaptor.hpp  aabb_tree Kopie.hpp  aabb_tree.hpp  algorithm.hpp  bit.hpp  boxtree.hpp  common.hpp  concepts.hpp  dispatch_queue.cpp  dispatch_queue.hpp  dynamic_dispatch.hpp  dynamic_library.cpp  dynamic_library.hpp  expected.hpp  expression_parser.hpp  fancy_debug.cpp  fancy_debug.hpp  filesystem_ext.hpp  format.hpp  function_view.hpp  functional.hpp  graph.hpp  (+40 more)
utl/__fmt/: chrono.h  color.h  core.h  fmt.cc  format.cc  os.cc  ranges.h  xchar.h
utl/__graph/: find_cycle.hpp  topsort.hpp
utl/dispatch/: concurrent_dispatch_queue.cpp  thread_pool.cpp  thread_pool.hpp
utl/graph/: topsort.hpp
utl/test/: terminates.hpp
